<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.PostUploadFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/uploadPostCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/uploadPostImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/placeholder" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/uploadText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/upload_image"
                android:textAlignment="center" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uploadPostText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="top|left"
                android:hint="@string/new_post" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/uploadPostButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:text="@string/upload"
            app:cornerRadius="15dp" />


    </LinearLayout>
</FrameLayout>